--- a/src/html/header-home.html
+++ b/src/html/header-home.html
@@ -7,9 +7,9 @@
       <div class="header__nav">
         <nav>
           <ul>
-            <li><a href="#">Обо мне</a></li>
-            <li><a href="#">Блог</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="about.html">Обо мне</a></li>
+            <li><a href="blog.html">Блог</a></li>
+            <li><a href="/#footer">Контакты</a></li>
             <li>
               <ul class="leng">
                 <li><a class="active" href="#">ру</a></li>
