--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,32 @@
-<footer>
+<footer id="footer" class="footer">
+  <img class="footer-top" src="@img/footer-top-bg.svg" alt="" />
+  <div class="footer__wrapper">
     <div class="container">
-        Footer
+      <div class="footer__social">
+        <div class="footer__social--title">Я в соцсетях</div>
+        <div class="footer__social--list">
+          <ul>
+            <li>
+              <a href="#">
+                <img src="@img/social/vk.svg" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href="#"><img src="@img/social/fb.svg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="@img/social/insta.svg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="@img/social/pinterest.svg" alt="" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__copy caption">
+        <a href="#">Политика конфиденциальности</a>
+        <div>© 2016 Magic Green Kitchen</div>
+      </div>
     </div>
+  </div>
 </footer>
