--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,15 +1,15 @@
-<header class="header header-home">
+<header class="header header-page">
   <div class="container">
     <div class="header__wrapper">
       <div class="header__logo">
-        <a href="#"><img src="@img/logo-header.svg" alt="" /></a>
+        <a href="index.html"><img src="@img/logo-header.svg" alt="" /></a>
       </div>
       <div class="header__nav">
         <nav>
           <ul>
-            <li><a href="#">Обо мне</a></li>
-            <li><a href="#">Блог</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="about.html">Обо мне</a></li>
+            <li><a href="blog.html">Блог</a></li>
+            <li><a href="/#footer">Контакты</a></li>
             <li>
               <ul class="leng">
                 <li><a class="active" href="#">ру</a></li>
