--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,7 @@
       <main class="main">
         <div class="about-me">
           <div class="container">
-            <div class="about-me__title">Обо мне</div>
+            <div class="about-me__title min-title">Обо мне</div>
             <div class="about-me__excerpt">
               Меня зовут Екатерина и в свой первой профессиональной области я —
               инвестиционный банкир с более чем 20 летним стажем и
@@ -129,6 +129,7 @@
             </div>
           </div>
         </div>
+        @@include('html/other-posts.html', {})
       </main>
       @@include('html/footer.html',{})
     </div>
