--- a/src/blog.html
+++ b/src/blog.html
@@ -1,58 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html',{ "title":"Главная" })
+  @@include('html/head.html',{ "title":"Блог" })
   <body>
     <div class="wrapper">
-      @@include('html/header-home.html',{})
+      @@include('html/header.html',{})
       <main class="main">
-        <div class="hero hero-home">
-          <div class="hero-home__img">
-            <img src="@img/home-hero.png" alt="" />
-          </div>
+        <div class="blog">
           <div class="container">
-            <h1>Magic green kitchen</h1>
-            <div class="hero-home__desc lead">
-              Практические рецепты и рекомендации для красоты и здоровья, а
-              также поддержания и генерации жизненной энергии
+            <h1>Блог</h1>
+            <div class="blog__tags">
+              <ul>
+                <li><a href="#">гид</a></li>
+                <li><a href="#">супы</a></li>
+                <li><a href="#">рецепт</a></li>
+                <li><a href="#">бизнес</a></li>
+                <li><a href="#">закуски</a></li>
+                <li><a href="#">блог</a></li>
+                <li><a href="#">йога</a></li>
+                <li><a href="#">рецепт</a></li>
+                <li><a href="#">бизнес</a></li>
+                <li><a href="#">гид</a></li>
+                <li><a href="#">длинный тэг</a></li>
+                <li><a href="#">именинный пирог</a></li>
+              </ul>
             </div>
-            <a href="#" class="btn">Узнать больше</a>
-          </div>
-        </div>
-        <div class="about-home">
-          <div class="container">
-            <div class="about-home__wrapper">
-              <div class="about-home__img">
-                <img src="@img/author.png" alt="" />
-              </div>
-              <div class="about-home__info">
-                <h2>Об авторе</h2>
-                <div class="about-home__subtitle t-20">
-                  Мы все хотим наслаждаться красотой жизни, достигать целей,
-                  обеспечить будущее  детей, правда ведь?
-                </div>
-                <p>
-                  Меня зовут Екатерина и в своей первой профессиональной области
-                  я — инвестиционный банкир с более чем 20 летним стажем и
-                  математическим образованием. Мне важна эффективность тела и
-                  точность и скорость мышления. Это и привело меня в ТриЙогу
-                  более 10 лет назад.
-                </p>
-                <p>
-                  Я — сертифицированный преподаватель ТриЙоги. Йоговские
-                  практики успешно работают для меня и моих учеников для
-                  повышения личной и бизнес эффективности.
-                </p>
-                <a href="#" class="btn">Узнать больше</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="new-home">
-          <div class="container">
-            <h2>Новое в блоге</h2>
             <div class="new-home__inner blog__wrapper">
               <div class="new-home__item blog__item">
-                <a href="#" class="new-home__item--img">
+                <a href="post.html" class="new-home__item--img">
                   <img src="@img/blog/blog-1.jpg" alt="" />
                 </a>
                 <div class="new-home__item--tags">
@@ -60,7 +34,7 @@
                   <a href="#">гид</a>&nbsp;|&nbsp;
                   <a href="#">закуски</a>
                 </div>
-                <a href="#" class="new-home__item--title t-20">
+                <a href="post.html" class="new-home__item--title t-20">
                   Веганский гид по Амстердаму. Рецепт веганского мак-н-чиз от
                   Willcroft
                 </a>
@@ -76,14 +50,14 @@
                   Луковое счастье. Рецепт веганского лукового супа
                 </a>
               </div>
-              <div class="new-home__item blog__item big item-biseness">
-                <a href="#" class="new-home__item--img">
+              <div class="new-home__item big item-biseness">
+                <a href="post.html" class="new-home__item--img">
                   <img src="@img/blog/blog-3.jpg" alt="" />
                 </a>
                 <div class="new-home__item--tags">
                   <a href="#">бизнес</a>
                 </div>
-                <a href="#" class="new-home__item--title">
+                <a href="post.html" class="new-home__item--title">
                   Женщины в банке. Мое интервью для корпоративной рассылки
                 </a>
               </div>
@@ -91,16 +65,16 @@
                 <div class="new-home__item--tags">
                   <a href="#">блог</a>
                 </div>
-                <a href="#" class="new-home__item--title">
+                <a href="post.html" class="new-home__item--title">
                   Секреты психологии для устойчивого развития. Рецепт морковного
                   салата
                 </a>
-                <a href="#" class="new-home__item--img">
+                <a href="post.html" class="new-home__item--img">
                   <img src="@img/blog/blog-4.jpg" alt="" />
                 </a>
               </div>
               <div class="new-home__item blog__item">
-                <a href="#" class="new-home__item--img">
+                <a href="post.html" class="new-home__item--img">
                   <img src="@img/blog/blog-1.jpg" alt="" />
                 </a>
                 <div class="new-home__item--tags">
@@ -108,13 +82,13 @@
                   <a href="#">гид</a>&nbsp;|&nbsp;
                   <a href="#">закуски</a>
                 </div>
-                <a href="#" class="new-home__item--title t-20">
+                <a href="post.html" class="new-home__item--title t-20">
                   Веганский гид по Амстердаму. Рецепт веганского мак-н-чиз от
                   Willcroft
                 </a>
               </div>
               <div class="new-home__item blog__item">
-                <a href="#" class="new-home__item--img">
+                <a href="post.html" class="new-home__item--img">
                   <img src="@img/blog/blog-2.jpg" alt="" />
                 </a>
                 <div class="new-home__item--tags">
@@ -122,13 +96,13 @@
                   <a href="#">гид</a>&nbsp;|&nbsp;
                   <a href="#">закуски</a>
                 </div>
-                <a href="#" class="new-home__item--title t-20">
+                <a href="post.html" class="new-home__item--title t-20">
                   Веганский гид по Амстердаму. Рецепт веганского мак-н-чиз от
                   Willcroft
                 </a>
               </div>
               <div class="new-home__item blog__item">
-                <a href="#" class="new-home__item--img">
+                <a href="post.html" class="new-home__item--img">
                   <img src="@img/blog/blog-2.jpg" alt="" />
                 </a>
                 <div class="new-home__item--tags">
@@ -136,7 +110,7 @@
                   <a href="#">гид</a>&nbsp;|&nbsp;
                   <a href="#">закуски</a>
                 </div>
-                <a href="#" class="new-home__item--title t-20">
+                <a href="post.html" class="new-home__item--title t-20">
                   Веганский гид по Амстердаму. Рецепт веганского мак-н-чиз от
                   Willcroft
                 </a>
@@ -145,16 +119,16 @@
                 <div class="new-home__item--tags">
                   <a href="#">блог</a>
                 </div>
-                <a href="#" class="new-home__item--title">
+                <a href="post.html" class="new-home__item--title">
                   Секреты психологии для устойчивого развития. Рецепт морковного
                   салата
                 </a>
-                <a href="#" class="new-home__item--img">
+                <a href="post.html" class="new-home__item--img">
                   <img src="@img/blog/blog-6.jpg" alt="" />
                 </a>
               </div>
               <div class="new-home__item blog__item">
-                <a href="#" class="new-home__item--img">
+                <a href="post.html" class="new-home__item--img">
                   <img src="@img/blog/blog-7.jpg" alt="" />
                 </a>
                 <div class="new-home__item--tags">
@@ -162,13 +136,12 @@
                   <a href="#">гид</a>&nbsp;|&nbsp;
                   <a href="#">закуски</a>
                 </div>
-                <a href="#" class="new-home__item--title t-20">
+                <a href="post.html" class="new-home__item--title t-20">
                   Веганский гид по Амстердаму. Рецепт веганского мак-н-чиз от
                   Willcroft
                 </a>
               </div>
             </div>
-            <a href="#" class="btn center">Все записи</a>
           </div>
         </div>
       </main>
