--- a/src/post-recipe.html
+++ b/src/post-recipe.html
@@ -32,9 +32,139 @@
                   </div>
                   <div class="date">Восточная пословица</div>
                 </div>
-                <div class="post__post-recipe--content"></div>
-              </div>
-              <div class="post__content post-recipe"></div>
+                <div class="post__post-recipe--content">
+                  <b>
+                    На мой день рожденье я заказала столик в ресторане
+                    исторического отеля Бристоль
+                  </b>
+                  <p>
+                    И для этого было 2 серьезных основания:Первое и самое
+                    важное: уже давно шеф — повар предлагает полное веганское
+                    меню (закуска, суп, основное блюдо и десерт).Второе и
+                    эстетическое: я поклонница стиля и атмосферы Ар-деко,
+                    которые с любовью воссозданы в ресторане.
+                  </p>
+                  <p>
+                    Да, да, тот самый луковый суп — визитная карточка
+                    французской кухни. Свои луковые супы готовят с пиететом по
+                    всей Европе: в Германии, Испании, Великобритании, Италии и,
+                    конечно же, в Австрии. Есть луковый суп по — Венски,
+                    тирольский и штирийский луковые супы. Готовят луковый суп и
+                    в Китае, Африке и на Ближнем Востоке. Но к сожалению, редко
+                    (пока!) можно встретить его веганское исполнение.
+                  </p>
+                  <b>
+                    А ведь по легенде культовый французский луковый суп, который
+                    придумал сам король Людовик XV, — веганский
+                  </b>
+                  <p>
+                    В поездке Людовик оторвался от свиты, проголодался и
+                    приготовил суп из 3 простых ингредиентов, оказавшиеся у него
+                    с собой — лука, шампанского и батона багета.
+                  </p>
+                  <p>
+                    Рецепт лукового супа можно найти во французской книги
+                    рецептов 16-ого века «Сборник рецептов Гийома Тиреля»,
+                    известного как шеф — повар Королевского двора Франции в 14
+                    веке. Широкую популярность суп получает в 18-ом веке, когда
+                    его подают в тавернах и закусочных на центральном Парижском
+                    рынке  торговцам, покупателям и туристам. Простые
+                    ингредиенты супа делают его очень доступным
+                  </p>
+                  <div class="post__post-recipe--slider swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide post__post-recipe--slide">
+                            <div class="post__post-recipe--slide-img">
+                                <img src="@img/slide-1.jpg" alt="">
+                            </div>
+                            <div class="post__post-recipe--slide-author date">
+                                АВТОР ФОТО: Восточная пословица
+                            </div>
+                        </div>
+                        <div class="post__post-recipe--navigation">
+                            <div class="post__post-recipe--prev">
+                                <svg width="9" height="12" viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M8.16016 1.41L3.58016 6L8.16016 10.59L6.75016 12L0.750156 6L6.75016 0L8.16016 1.41Z" fill="#758554"/>
+                                </svg>
+                            </div>
+                            <div class="post__post-recipe--next">
+                                <svg width="9" height="12" viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.839844 1.41L5.41984 6L0.839844 10.59L2.24984 12L8.24984 6L2.24984 0L0.839844 1.41Z" fill="#758554"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                  <b>
+                    Особый аромат и вкус супа создается благодаря карамелизации лука
+                  </b>
+                  <p>
+                    Возможно, благодаря луковому супу или своей природной красоте — точенной форме, ярким солнечным краскам, лук становится любимой моделью художников. Ван Гог во время своего Парижского периода, пишет несколько натюрмортов, где репчатый лук в центре композицию.  Ренуар в 1881 году создает натюрморт Лук, полностью посвящений луковицам.
+                  </p>
+                  <p>
+                    Лук, как культура, известен человечеству более 5 тысяч лет и сегодня существует множество сортов, которые отличаются размером, цветом и формой как луковиц, так и перьев. Чеснок, кстати, тоже относится к виду Лук.
+                  </p>
+                  <p>
+                    В луковицах содержатся витамина С и B6, флавоноид кверцетин, ферменты, сапонины, минеральные соли калия, фосфора, железа и др., фитонциды, а также 8—14 % сахаров и небольшое количество белков (1,5—2 %). Именно фитонциды и наделяют лук мощными антибактерицидными и антипаразитарными свойствами.
+                  </p>
+                  <b>
+                    Может быть,  благодаря своим лечебным свойствам, лук часто символизирует бессмертие и единство с космосом?
+                  </b>
+                  <p>
+                    Кстати, рецепт лукового супа часто можно найти в книгах о красоте, здоровье и очищении.
+                  </p>
+                  <p>
+                    Для супа лучше выбирать нежные сорта лука, например, белый летний, красный Бермудский или солнечный испанский (как у меня на картинке). В принципе, можно готовить из  любого репчатого лука, и если вкус окажется слишком агрессивным, можно добавить при варке чуть — чуть сахара или сладкого сиропа.
+                  </p>
+                </div>
+                <div class="post__post-recipe--compound">
+                    <h3>Рецепт лукового супа</h3>
+                    <div class="post__post-recipe--list">
+                        <h5>ингредиенты</h5>
+                        <ul>
+                            <li>
+                                <p>Репчатый лук</p>
+                                <span></span>
+                                <p>3 — 4 луковицы</p>
+                            </li>
+                            <li>
+                                <p>Оливковое масло</p>
+                                <span></span>
+                                <p>2 ст. ложки (разделить)</p>
+                            </li>
+                            <li>
+                                <p>Овощной бульон</p>
+                                <span></span>
+                                <p>2 кубика овощного бульона на 4 стакана воды (1 л)  или 4 стакана овощного бульона ( 1 л)</p>
+                            </li>
+                            <li>
+                                <p>Гренки или подсушенный хлеб, порезанный на кубики или крутоны</p>
+                            </li>
+                            <li>
+                                <p>Соль</p>
+                                <span></span>
+                                <p>по вкусу</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="post__post-recipe--instruction">
+                    <h5>Инструкция приготовления</h5>
+                    <ol type="1">
+                        <li>Подготовить все ингредиенты</li>
+                        <li>Очистить лук и порезать его тонкими полукружочками</li>
+                        <li>Разогреть 1 ст ложку растительного масла на глубокой сковороде, добавить лук, тимьян и соль. Уменьшить огонь и готовить на маленьком огне, постоянно  помешивая, пока лук не станет прозрачным и золотым (примерно 45 — 60 минут)
+                            <img src="@img/rec-1.jpg" alt="">
+                        </li>
+                        <li>Добавить бальзамический уксус, продолжать  помешивать , пока уксус не впитается (примерно 10 — 15 минут)
+                            <img src="@img/rec-2.jpg" alt="">
+                        </li>
+                        <li>Добавить бульон, лавровый лист и воду, довести до кипения. Сбавить огонь и томить на медленном огне еще 20 — 30 минут</li>
+                        <li>Вынуть лавровый лист</li>
+                        <li>Разложить гренки  или или кусочки подсушенного хлеба (крутоны)  по  глубоким тарелкам и налить суп</li>
+                    </ol>
+                    <p>Рецептом и фотографиями  поделилась преподавательница  ТриЙоги Сантоши Деви. Сантоши побаловала кулинарным шедевром, когда недавно навестила нас в Вене.  Также в блоге  можно прочитать ее веганский гид по Гранаде : в мае 2018 года Сантоши преподавала программу ТриЙогу  в Испании.</p>
+                </div>
               <div class="post__footer">
                 <div class="post__share">
                   <div class="post__share--tags blog__tags">
