--- a/src/post.html
+++ b/src/post.html
@@ -67,9 +67,9 @@
                   </div>
                   @@include('html/share-dark.html' ,{})
                 </div>
-                <div class="post_navigation"></div>
+                @@include('html/post-nav.html', {})
                 <div id="comments" class="comments"></div>
-                <div id="respond" class="comment-respond"></div>
+                @@include('html/respond.html', {})
               </div>
             </div>
           </div>
