--- a/src/post-recipe.html
+++ b/src/post-recipe.html
@@ -196,8 +196,8 @@
                 @@include('html/share-dark.html' ,{})
               </div>
                 @@include('html/post-nav.html', {})
-              <div id="comments" class="comments"></div>
-              @@include('html/respond.html', {})
+                @@include('html/comments.html', {})
+                @@include('html/respond.html', {})
             </div>
           </div>
           @@include('html/other-posts.html', {})
