--- a/src/post.html
+++ b/src/post.html
@@ -68,7 +68,7 @@
                   @@include('html/share-dark.html' ,{})
                 </div>
                 @@include('html/post-nav.html', {})
-                <div id="comments" class="comments"></div>
+                <!-- @@include('html/comments.html', {}) -->
                 @@include('html/respond.html', {})
               </div>
             </div>
