--- a/src/blog.html
+++ b/src/blog.html
@@ -40,13 +40,13 @@
                 </a>
               </div>
               <div class="new-home__item blog__item">
-                <a href="#" class="new-home__item--img">
+                <a href="post-recipe.html" class="new-home__item--img">
                   <img src="@img/blog/blog-2.jpg" alt="" />
                 </a>
                 <div class="new-home__item--tags">
                   <a href="#">супы</a>
                 </div>
-                <a href="#" class="new-home__item--title t-20">
+                <a href="post-recipe.html" class="new-home__item--title t-20">
                   Луковое счастье. Рецепт веганского лукового супа
                 </a>
               </div>
