--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
       @@include('html/header-home.html',{})
       <main class="main">
         <div class="hero hero-home">
-          <div class="hero-home__img">
+          <!-- <div class="hero-home__img">
             <img src="@img/home-hero.png" alt="" />
-          </div>
+          </div> -->
           <div class="container">
             <h1>Magic green kitchen</h1>
             <div class="hero-home__desc lead">
@@ -16,6 +16,15 @@
               также поддержания и генерации жизненной энергии
             </div>
             <a href="#" class="btn">Узнать больше</a>
+          </div>
+          <div class="hero-home__img">
+            <picture>
+              <source
+                media="(max-width: 900px)"
+                srcset="@img/home-hero-mobile.png"
+              />
+              <img src="@img/home-hero.png" />
+            </picture>
           </div>
         </div>
         <div class="about-home">
