--- a/src/blog.html
+++ b/src/blog.html
@@ -142,6 +142,17 @@
                 </a>
               </div>
             </div>
+            <nav class="navigation pagination" aria-label="Записи">
+              <div class="nav-links">
+                <a class="prev page-numbers" href="#"> </a>
+                <span aria-current="page" class="page-numbers current">1</span>
+                <a class="page-numbers" href="#">2</a>
+                <span class="page-numbers dots">…</span>
+                <a class="page-numbers" href="#">9</a>
+                <a class="page-numbers" href="#">10</a>
+                <a class="next page-numbers" href="#"></a>
+              </div>
+            </nav>
           </div>
         </div>
       </main>
