--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                 </a>
               </div>
             </div>
-            <a href="#" class="btn center">Все записи</a>
+            <a href="blog.html" class="btn center">Все записи</a>
           </div>
         </div>
       </main>
